# mosaic

./: .env  .gitignore  Cargo.toml  DESIGN.md  README.md  SPEC.md
client/src/: main.rs
design/: DATABASE.md  STACK.md
old/: README.md
old/client/: Cargo.toml
old/design/: DATABASE.md  STACK.md
old/server/: .env  Cargo.toml
old/server/src/: main.rs
server/: .env  Cargo.toml
server/src/: main.rs
src/: main.rs
