[package]
name = "mosaic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Yew
yew = { version = "0.20", features = ["csr"] }

# SQLX stuff
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql"] }
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"

# WASM
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"

[build]
rustflags = [ "--cfg", "tokio_unstable" ]
