[package]
name = "mosaic_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# SQLX stuff
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"

# Axum for back-end
axum = "0.6.1"
