[package]
name = "mosaic_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
